# corasick-park

./: Dockerfile  README.md  cabal.config  corasick-park.cabal
spec/Text/CorasickPark/: AlgorithmSpec.hs  ParserSpec.hs
src/: CorasickPark.hs
src/Text/CorasickPark/: Algorithm.hs  Parser.hs  Types.hs
src/Text/CorasickPark/Handler/: Transform.hs  Update.hs  Utils.hs
